{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 239,
  "lineage": "21544823-5a66-59f3-dea8-4b3cb6a1b1e2",
  "resources": [
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048d0c4866e1c4954",
            "arn": "arn:aws:ec2:us-east-1:637423232823:elastic-ip/eipalloc-048d0c4866e1c4954",
            "association_id": "eipassoc-0486baa875e9e15e0",
            "domain": "vpc",
            "id": "eipalloc-048d0c4866e1c4954",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0003b9d81404e3d80",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-52-203-45-55.compute-1.amazonaws.com",
            "public_ip": "52.203.45.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "feature-login-nat-eip"
            },
            "tags_all": {
              "Name": "feature-login-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:internet-gateway/igw-0215c8c5342268d42",
            "id": "igw-0215c8c5342268d42",
            "owner_id": "637423232823",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048d0c4866e1c4954",
            "association_id": "eipassoc-0486baa875e9e15e0",
            "connectivity_type": "public",
            "id": "nat-04a8c99a16a5ded69",
            "network_interface_id": "eni-0003b9d81404e3d80",
            "private_ip": "10.0.1.218",
            "public_ip": "52.203.45.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01801868bab5d8247",
            "tags": {
              "Name": "project-nat-gw"
            },
            "tags_all": {
              "Name": "project-nat-gw"
            }
          },
          "dependencies": [
            "module.network.module.network.aws_eip.nat",
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:route-table/rtb-0edfb83c8a8545c6c",
            "id": "rtb-0edfb83c8a8545c6c",
            "owner_id": "637423232823",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a8c99a16a5ded69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-private-rt"
            },
            "tags_all": {
              "Name": "project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.network.aws_eip.nat",
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_nat_gateway.main",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:route-table/rtb-03668bda5c6f2c79e",
            "id": "rtb-03668bda5c6f2c79e",
            "owner_id": "637423232823",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0215c8c5342268d42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-public-rt"
            },
            "tags_all": {
              "Name": "project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc5112937af9eec5",
            "route_table_id": "rtb-0edfb83c8a8545c6c",
            "subnet_id": "subnet-0bbf65a3f9e7cddd9"
          },
          "dependencies": [
            "module.network.module.network.aws_eip.nat",
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_nat_gateway.main",
            "module.network.module.network.aws_route_table.private",
            "module.network.module.network.aws_subnet.private",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0158f1b14c7b4bd50",
            "route_table_id": "rtb-0edfb83c8a8545c6c",
            "subnet_id": "subnet-03a95dbd62d194c14"
          },
          "dependencies": [
            "module.network.module.network.aws_eip.nat",
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_nat_gateway.main",
            "module.network.module.network.aws_route_table.private",
            "module.network.module.network.aws_subnet.private",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d7f51faccb35e61",
            "route_table_id": "rtb-03668bda5c6f2c79e",
            "subnet_id": "subnet-01801868bab5d8247"
          },
          "dependencies": [
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_route_table.public",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06017a4ac404647b3",
            "route_table_id": "rtb-03668bda5c6f2c79e",
            "subnet_id": "subnet-0844d8387f1f10842"
          },
          "dependencies": [
            "module.network.module.network.aws_internet_gateway.main",
            "module.network.module.network.aws_route_table.public",
            "module.network.module.network.aws_subnet.public_2",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:security-group/sg-05962eb448661e7a5",
            "description": "Security group for ALB and ECS Fargate service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05962eb448661e7a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "project-ecs-sg",
            "name_prefix": "",
            "owner_id": "637423232823",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-sg"
            },
            "tags_all": {
              "Name": "project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:subnet/subnet-0bbf65a3f9e7cddd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbf65a3f9e7cddd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423232823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-0"
            },
            "tags_all": {
              "Name": "project-private-0"
            },
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:subnet/subnet-03a95dbd62d194c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a95dbd62d194c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423232823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-1"
            },
            "tags_all": {
              "Name": "project-private-1"
            },
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:subnet/subnet-01801868bab5d8247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01801868bab5d8247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423232823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-1"
            },
            "tags_all": {
              "Name": "project-public-1"
            },
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:subnet/subnet-0844d8387f1f10842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0844d8387f1f10842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423232823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-2"
            },
            "tags_all": {
              "Name": "project-public-2"
            },
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423232823:vpc/vpc-017264fd71fa5aa39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f18e883cfddfc45f",
            "default_route_table_id": "rtb-0d0e403a0c82b6814",
            "default_security_group_id": "sg-00e6c63eef042a875",
            "dhcp_options_id": "dopt-07cb91573a799e599",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017264fd71fa5aa39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0e403a0c82b6814",
            "owner_id": "637423232823",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423232823:loadbalancer/app/go-project-feature-login-alb/68283c07e5a4cdad",
            "arn_suffix": "app/go-project-feature-login-alb/68283c07e5a4cdad",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "go-project-feature-login-alb-1703397427.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423232823:loadbalancer/app/go-project-feature-login-alb/68283c07e5a4cdad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "go-project-feature-login-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05962eb448661e7a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01801868bab5d8247"
              },
              {
                "subnet_id": "subnet-0844d8387f1f10842"
              }
            ],
            "subnets": [
              "subnet-01801868bab5d8247",
              "subnet-0844d8387f1f10842"
            ],
            "tags": {
              "Name": "go-project-feature-login-alb"
            },
            "tags_all": {
              "Name": "go-project-feature-login-alb"
            },
            "vpc_id": "vpc-017264fd71fa5aa39",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.module.network.aws_security_group.ecs_service_sg",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_subnet.public_2",
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423232823:listener/app/go-project-feature-login-alb/68283c07e5a4cdad/10e6d06aa6e260fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423232823:targetgroup/go-project-feature-login-tg/87132cb7ddb6b824",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423232823:listener/app/go-project-feature-login-alb/68283c07e5a4cdad/10e6d06aa6e260fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423232823:loadbalancer/app/go-project-feature-login-alb/68283c07e5a4cdad",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.network.aws_security_group.ecs_service_sg",
            "module.network.module.network.aws_subnet.public_1",
            "module.network.module.network.aws_subnet.public_2",
            "module.network.module.network.aws_vpc.main",
            "module.service.aws_lb.dev",
            "module.service.aws_lb_target_group.dev"
          ]
        }
      ]
    },
    {
      "module": "module.service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423232823:targetgroup/go-project-feature-login-tg/87132cb7ddb6b824",
            "arn_suffix": "targetgroup/go-project-feature-login-tg/87132cb7ddb6b824",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423232823:targetgroup/go-project-feature-login-tg/87132cb7ddb6b824",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:637423232823:loadbalancer/app/go-project-feature-login-alb/68283c07e5a4cdad"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "go-project-feature-login-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "go-project-feature-login-tg"
            },
            "tags_all": {
              "Name": "go-project-feature-login-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-017264fd71fa5aa39"
          },
          "dependencies": [
            "module.network.module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}